[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Splatter.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Character4.gd" type="Script" id=2]
[ext_resource path="res://Assets/Audio/done_01.wav" type="AudioStream" id=3]

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
flags_albedo_tex_force_srgb = true
params_depth_draw_mode = 3
params_billboard_mode = 1

[sub_resource type="CapsuleShape" id=1]
radius = 0.25
height = 0.6

[sub_resource type="SphereShape" id=3]
radius = 8.0

[sub_resource type="AudioStreamRandomPitch" id=4]
audio_stream = ExtResource( 3 )

[node name="Character4" type="KinematicBody" groups=["character", "proximity", "selectable"]]
visible = false
collision_layer = 18
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0 )
material_override = SubResource( 2 )
pixel_size = 0.005
billboard = 1
double_sided = false
alpha_cut = 2

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.6, 0 )
shape = SubResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 240, 240 )
transparent_bg = true
handle_input_locally = false
keep_3d_linear = true
render_target_v_flip = true

[node name="CharacterSprite" type="Node2D" parent="Viewport"]

[node name="Sprite" type="Sprite" parent="Viewport/CharacterSprite"]
light_mask = 2
centered = false

[node name="Light2D" type="Light2D" parent="Viewport/CharacterSprite"]
light_mask = 2
offset = Vector2( 120, 120 )
mode = 3

[node name="Splatter1" type="Sprite" parent="Viewport/CharacterSprite"]
rotation = 0.230383
centered = false
offset = Vector2( 100, 0 )
script = ExtResource( 1 )

[node name="Splatter2" type="Sprite" parent="Viewport/CharacterSprite"]
centered = false
script = ExtResource( 1 )
my_splat_num = 1

[node name="Splatter3" type="Sprite" parent="Viewport/CharacterSprite"]
centered = false
offset = Vector2( 20, 10 )
script = ExtResource( 1 )
my_splat_num = 2

[node name="TargetPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0 )

[node name="NavigationAgent" type="NavigationAgent" parent="."]
path_desired_distance = 0.1
target_desired_distance = 0.1
agent_height_offset = 0.05
avoidance_enabled = true
radius = 0.1
neighbor_dist = 10.0

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0 )
enabled = true
exclude_parent = false
collision_mask = 3
debug_shape_custom_color = Color( 0.831373, 0.239216, 0.262745, 1 )

[node name="Area" type="Area" parent="."]
collision_layer = 2
collision_mask = 16
input_ray_pickable = false
monitoring = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[node name="CharacterSound" type="AudioStreamPlayer3D" parent="."]
stream = SubResource( 4 )
bus = "SFX"

[connection signal="input_event" from="." to="." method="_on_Character3D_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Character3D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Character3D_mouse_exited"]
[connection signal="velocity_computed" from="NavigationAgent" to="." method="_on_NavigationAgent_velocity_computed"]
[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_Area_area_exited"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
